# vagrant-vocab-conversion

./: Makefile.in  README.md  README.org  Vagrantfile  bootstrap.sh  configure.ac  grande_domains.ttl  text-sur-les-fiches-rome.ttl
excelfiles/: Vorlage-for-Mapping-DKZ-ESCO_Stand-240216.xlsx
excelfiles/Rome2016-04/: #text-sur-les-fiches-rome.xls#  arborescences-du-rome.xls  correspondance_rome_isco08_decembre13221.xlsx  grande_domains.xls  ref-des-appellations.xls  text-sur-les-fiches-rome.xls
system/scripts/: README.md  arborescences-du-rome.py.in  correspondance rome_isco08_ decembre13221.py.in  correspondance_rome_isco08_decembre13221.py.in  esco2rdf.py.in  grande_domains.py.in  ref-des-appellations.py.in  rome.py  text-sur-les-fiches-rome.py.in  unix_cr_gd_dp_v328_utf8.py.in  unix_item_arborescence_v328_utf8.py.in  xls2rdf.py  xls2rdf.py.in
